# rag-with-eval

./: .env.example  .gitignore  02-rag-with-eval.md  CLAUDE.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
data/: fetch_corpus.py
data/corpus/: 01_what_is_rag.md  02_chunking.md  03_embeddings.md  04_retrieval.md  05_reranking.md  06_rag_evaluation.md  07_vector_databases.md  08_rag_in_italiano.md  README.md
eval/: run_eval.py  testset.yaml
eval/results/: metrics_offline.csv  metrics_offline.md  metrics_semantic.csv  metrics_semantic.md  per_item_offline.json  per_item_semantic.json
src/rag/: __init__.py  config.py  generate.py  index.py  ingest.py  metrics.py  models.py  pipeline.py  prompts.py  retrieve.py  textutil.py
src/rag/providers/: __init__.py  embeddings.py  llm.py  reranker.py
tests/: conftest.py  test_embeddings.py  test_eval_harness.py  test_ingest.py  test_metrics.py  test_pipeline.py  test_retrieve.py  test_textutil.py
